nodejs-inception-demo/inception_ui_k8s_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inception-ui-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /inception
        backend:
          serviceName: inception-ui
          servicePort: http
